--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "feidianapplysystem",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "author":"hxx",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
