--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "author":"hxx",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
