--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "author":"hxx",
+  "author": "hxx",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "ahooks": "^3.7.4",
     "antd": "^5.1.6",
     "axios": "^1.2.6",
     "react": "^18.2.0",
